--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.21",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.13.1",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
