fix 404 github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://batanoffs.github.io/mini-finance/",
-  "name": "mini-finance-app",
+  "name": "mini-finance",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
