--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://batanoffs.github.io/mini-finance/",
+  "homepage": "http://batanoffs.github.io/",
   "name": "mini-finance",
   "version": "0.1.0",
   "private": true,
