--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@faceio/fiojs": "^1.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.21",
     "@testing-library/jest-dom": "^5.17.0",
