--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
   "name": "mini-finance",
+  "author": "Daniel Batanov",
+  "license": "MIT",
   "homepage": "http://batanoffs.github.io/mini-finance",
-  "version": "0.2.0",
+  "version": "0.3.0",
+  "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage --watch=false",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -12,26 +26,31 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.21",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "antd": "^5.13.1",
     "dotenv": "^16.4.5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-credit-cards-2": "^1.0.2",
-    "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
     "vanta": "^0.5.24",
+    "vite-plugin-svgr": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "set \"REACT_APP_NOT_SECRET_CODE=B34FC355-39F4-F3CB-FF3A-482164967700\" && react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.3",
+    "gh-pages": "^6.1.1",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.3",
+    "@eslint/js": "^9.12.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.11.0",
+    "vite": "^5.4.9"
   },
   "eslintConfig": {
     "extends": [
@@ -51,13 +70,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/batanoff/mini-finance.git"
-  },
-  "author": "Daniel Batanov",
-  "license": "MIT"
+  }
 }
