--- a/package.json
+++ b/package.json
@@ -15,39 +15,29 @@
     "test:coverage": "vitest run --coverage --watch=false"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@splinetool/react-spline": "^2.2.6",
-    "@splinetool/runtime": "^1.0.21",
     "antd": "^5.13.1",
-    "dotenv": "^16.4.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-credit-cards-2": "^1.0.2",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.1",
-    "vanta": "^0.5.24",
     "vite-plugin-svgr": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^2.1.3",
-    "gh-pages": "^6.1.1",
-    "jsdom": "^25.0.1",
-    "vitest": "^2.1.3",
     "@eslint/js": "^9.12.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^2.1.3",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^2.1.3"
   },
   "eslintConfig": {
     "extends": [
