--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.13.1",
+    "backendless": "^7.3.7",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.3.1",
