--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.3.1",
+    "react-phone-number-input": "^3.4.11",
     "react-router-dom": "^6.21.1",
     "vite-plugin-svgr": "^4.3.0",
     "web-vitals": "^2.1.4"
